--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,14 @@
 /* styles go here */
+fieldset {
+  margin-bottom: 20px;
+}
+
+.form-field {
+  display: block;
+  padding-bottom: 10px;
+
+}
+
+.form-field:last-child {
+  padding-bottom: 0;
+}
